<resources>
    <string name="app_name">ekohort-android</string>
    <string name="ondboarding_image">ondboarding_image</string>
    <string name="welcome">Welcome</string>
    <string name="onboarding_text1">Get a realtime result for people health\'s monitoring</string>
    <string name="btn_next">Next</string>
    <string name="button_ghost_btn">Button</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_image">welcome_image</string>
    <string name="get_started2">Get Started</string>
    <string name="onboardin_textview2">Get a result about people’s health real time in one app</string>
    <string name="get_started_btn">Get Started</string>
    <string name="logo_app">logo_app</string>
    <string name="ekohort_mobile">Ekohort Mobile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_warning">Password must be at least 8 characters</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_with_google">login with google</string>
    <string name="or">Or</string>
    <string name="register_now">Register Now</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="register">Register</string>
    <string name="register_with_google">Register with Google</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_now">Login Now</string>
    <string name="pop_up_image">pop up image</string>
    <string name="your_account_has_been_created">Your Account Has Been Created</string>
    <string name="pop_up_text">To log in into your account use the email and password that you already registered</string>
    <string name="logout">logout</string>
    <string name="avatar_circle">avatar circle</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="icon_menu_anak">icon_menu_anak</string>
    <string name="data_pelayanan">Data Pelayanan</string>
    <string name="ic_ibu">ic_ibu</string>
    <string name="ibu">Ibu</string>
    <string name="anak">Anak</string>
    <string name="data_statistik">Data Statistik</string>
    <string name="icon_card">icon_card</string>
    <string name="photo_of_blog">photo of blog</string>
    <string name="artikel">Artikel</string>
    <string name="kader_kesehatan">Kader Kesehatan</string>
    <string name="lansia">Lansia</string>
    <string name="icon_lansia">icon lansia</string>
    <string name="icon_kader">icon kader</string>
    <string name="icon_ibu">icon ibu</string>
    <string name="data_pelayanan_ibu">Data Pelayanan Ibu</string>
    <string name="data_pelayanan_anak">Data Pelayanan Anak</string>
    <string name="list_ibu_hamil">List Ibu Hamil</string>
    <string name="tambah_data">+ Tambah Data</string>
    <string name="tambah_data_ibu_baru">Tambah Data Ibu Baru</string>
    <string name="ubah_data_ibu">Ubah Data Ibu</string>
    <string-array name="title_blog">
        <item>A tips from doctor for a health</item>
        <item>Covid-19 vaccinate from china</item>
        <item>An operation doctor </item>
    </string-array>
    <string-array name="date_blog">
        <item>19/10/2023</item>
        <item>23/10/2023</item>
        <item>20/10/2023</item>
    </string-array>
    <string-array name="photo_blog">
        <item>@drawable/blog1</item>
        <item>@drawable/blog2</item>
        <item>@drawable/blog3</item>
    </string-array>
    <string-array name="description_blog">
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</item>
        <item>It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</item>
    </string-array>
    <string name="selected_item">Selected Item: </string>
    <string name="data_ibu">data ibu\n</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="nik">NIK</string>
    <string name="nomor_kartu_keluarga">No KK</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="alamat_tempat_tinggal_sekarang">Alamat Tempat tinggal</string>
    <string name="provinsi">Provinsi</string>
    <string name="alamat">Alamat</string>
    <string name="edt_alamat">Alamat</string>
    <string name="data_riwayat_kesehatan">Data Riwayat Kesehatan</string>
    <string name="tb_cm">TB (CM)</string>
    <string name="tinggi_badan_cm">Tinggi Badan (CM)</string>
    <string name="berat_badan_kg">Berat Badan (KG)</string>
    <string name="bb_kg">BB (KG)</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="tanggal_kunjungan">Tanggal Kunjungan</string>
    <string name="tanggal_kunjungan_berikutnya">Tanggal Kunjungan Berikutnya</string>
    <string name="nomor_hp_wa">Nomor HP/WA</string>
    <string name="submit_data">Submit Data</string>
    <string name="save">Simpan</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="wa">WA</string>
    <string name="detail_data_ibu">Detail Data Ibu</string>
    <string name="tempat_tinggal_sekarang">Tempat Tinggal Sekarang</string>
    <string name="data_riwayat_kesehatan_detail">Data Riwayat Kesehatan</string>
    <string name="data_anak">data anak</string>
    <string name="nama_anak">Nama anak</string>
    <string name="tambah_data_anak">Tambah data anak</string>
    <string name="data_ortu">Data Orang Tua</string>
    <string name="nama_ayah">Nama ayah</string>
    <string-array name="gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="keterangan">Keterangan</string>
    <string name="ubah_data_anak">Ubah data anak</string>
    <string name="detail_data_anak">Detail Data Anak</string>
    <string name="detail_data_nakes">Detail Data Nakes</string>
    <string name="data_nakes">Data Nakes</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
    <string name="puskesmas">Puskesmas</string>
    <string name="role">Jabatan</string>
    <string name="data_nakes_pada_puskesmas">Data Nakes pada Puskesmas</string>
    <string name="ubah_data_nakes">Ubah Data Nakes</string>
    <string name="tambah_data_nakes">Tambah Data Nakes</string>
    <string-array name="provinsi_array">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Bengkulu</item>
        <item>Sumatera Selatan</item>
        <item>Lampung</item>
        <item>Bangka Belitung</item>
        <item>Kepulauan Riau</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Gorontalo</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>
</resources>