<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".view.data_pelayanan.ibu.ListIbuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false">

        <View
            android:id="@+id/rectangle_7"
            android:layout_width="412dp"
            android:layout_height="243dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#8840FB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="132dp"
            android:contentDescription="@string/avatar_circle"
            android:src="@drawable/avatar_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_data_pelayanan_ibu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="152dp"
            android:text="@string/data_pelayanan_ibu"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

        <TextView
            android:id="@+id/tv_list_ibu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/list_ibu_hamil"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="216dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_form"
            android:queryHint="Cari data ibu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

        <Button
            android:id="@+id/btn_add_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:text="@string/tambah_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>